scripts/nullaway/original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:69: error: [NullAway] initializer method does not guarantee @NonNull field weibull (line 50) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public  Main(){
            ^
    (see http://t.uber.com/nullaway )
../original/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Cola.java:44: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return datoAuxiliar;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
